<resources>
    <string name="app_name">公卫随访</string>
    <string name="action_settings">Settings</string>
    <string name="click_two_exit">再按一次退出程序</string>
    <string name="login">登录</string>
    <string name="phone_number">账号</string>
    <string name="chose_unit">所属机构</string>
    <string name="register">注册</string>
    <string name="back">返回</string>
    <string name="unit_org_filter">单位过虑查询</string>
    <string name="account_not_null">账号格式不正确</string>
    <string name="psssword_not_null">密码格式不正确</string>
    <string name="is_landing">正在登录...</string>
    <string name="org_is_not_null">请选择机构</string>
    <string name="register_success">注册成功</string>
    <string name="home_page">主页</string>
    <string name="archives_query">建档查询</string>
    <string name="hypertension_visit">高血压随访</string>
    <string name="hypertension_query">高血压随访查询</string>
    <string name="diabetes_visit">糖尿病随访</string>
    <string name="diabetes_visit_query">糖尿病随访</string>
    <string name="psychosis_visit">精神病随访</string>
    <string name="pregnant_visit">孕妇随访</string>
    <string name="child_visit">儿童随访</string>
    <string name="workload_statistics">工作量统计</string>
    <string name="task_remind">任务提醒</string>
    <string name="archives_entry">档案录入</string>
    <string name="number_hit">输入账号</string>
    <string name="password">密码</string>
    <string name="password_hint">请输入密码</string>
    <string name="show_password">显示密码</string>
    <string name="remember_password">记住密码</string>
    <string name="new_user_register">新用户注册</string>
    <string name="un_org">未匹配到相关的单位</string>
    <string name="org_name">单位名称</string>
    <string name="phonenumber">手机号码</string>
    <string name="network_error">网络错误，请检查网络设置</string>
    <string name="server_error">服务器错误</string>
    <string name="search_content">请输入搜索内容</string>
    <string name="input_content_not_null">输入内容不能为空</string>
    <string name="is_loading_please_waite">正在加载，请稍后...</string>
    <string name="name">姓名</string>
    <string name="resident">常住类型</string>
    <string name="ehr_id">档案号</string>
    <string name="crid_code">身份证号</string>
    <string name="work_unit">工作单位</string>
    <string name="address">地址</string>
    <string name="telephone">电话</string>
    <string name="cr_org_code">建档机构</string>
    <string name="search_result">搜索结果</string>
    <string name="sex">性别</string>
    <string name="birthday">出生日期</string>
    <string name="disease_status">疾病状态</string>
    <string name="diagnose_date">确诊日期</string>
    <string name="source_flag">病例来源</string>
    <string name="height">身高</string>
    <string name="weight">体重</string>
    <string name="systolic_pressure">收缩压</string>
    <string name="diastolic_pressure">舒张压</string>
    <string name="visit_date">随访日期</string>
    <string name="symptom">症状</string>
    <string name="symptom_other">其他症状</string>
    <string name="systolic_pressure1">血压</string>
    <string name="systolic_pressure_unit">mmHg</string>
    <string name="backslash">/</string>
    <string name="weight_unit">kg</string>
    <string name="height_unit">cm</string>
    <string name="heart_rate">心率</string>
    <string name="heart_time_unit">次/分钟</string>
    <string name="objective_sign_other">其他体征</string>
    <string name="smoking_dnum">日吸烟量</string>
    <string name="smoking_unit">支</string>
    <string name="drinking_dnum">日饮酒量</string>
    <string name="drinking_dnum_unit">两</string>
    <string name="sport_weeknum">周运动次数</string>
    <string name="once">次</string>
    <string name="sport_times">周活动时间</string>
    <string name="minute">分钟</string>
    <string-array name="absorbsalt_case">
        <item></item>
        <item>轻</item>
        <item>中</item>
        <item>重</item>
    </string-array>
    <string name="BIM">BIM</string>
    <string name="aid_mtest_result">辅助检查</string>
    <string name="drug_side_effect">药物不良反应</string>
    <string name="drug_side_effects">不良反应内容</string>
    <string name="mental_adjust">心态调整</string>
    <string name="compiance">遵医行为</string>
    <string name="rule_dose">服药依从</string>
    <string name="visit_appraise">随访类别</string>
    <string name="drug1_name">药物1名称</string>
    <string name="drug1_fn">药物1用法:每日</string>
    <string name="drug1_dosage_one">每次</string>
    <string name="drug2_name">药物2名称</string>
    <string name="drug2_fn">药物2用法:每日</string>
    <string name="drug2_usagetext">药物2用法:</string>
    <string name="drug3_name">药物3名称</string>
    <string name="drug3_fn">药物3用法:每日</string>
    <string name="drug3_usagetext">药物3用法</string>
    <string name="transfert_cause">转诊原因</string>
    <string name="transfert_dept">转诊科别</string>
    <string name="next_visit_date">下次随访日期</string>
    <string name="visit_moding">拜访模式</string>
    <string name="visit_doctor">随访医师</string>
    <string name="cm_guidance">中医指导</string>
    <string name="cm_guidance_str">指导内容</string>
    <string name="add_visit">添加随访记录</string>
    <string name="choose_date">选择日期</string>
    <string name="ok">确认</string>
    <string name="cancel">取消</string>
    <string name="not_more_current_time">不能大于当前时间</string>
    <string name="add_success">添加成功</string>
    <string name="diagnose_time">确诊时间</string>
    <string name="case_source">病例来源</string>
    <string name="case_type">病例种类</string>
    <string name="diabetes_family_history">糖尿病家族史</string>
    <string name="cards_blood_glucose_level">建卡时血糖水平</string>
    <string name="not_found">没有找到该人员标识信息</string>
    <string name="dorsalis_pedis">足背动脉博动</string>
    <string name="eday_main_food">主&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;食</string>
    <string name="eday_main_food_unit">克/日</string>
    <string name="fasting_blood_glucose">空腹血糖</string>
    <string name="random_blood_sugar">随机血糖</string>
    <string name="mmol_L">mmol/L</string>
    <string name="blood_ghb">糖化血红蛋白值</string>
    <string name="percent">%</string>
    <string name="mtest_date">检查日期</string>
    <string name="other_mtest1">其他检查1</string>
    <string name="other_mtest2">其他检查2</string>
    <string name="other_mtest3">其他检查3</string>
    <string-array name="glucopenia">
        <item></item>
        <item>无</item>
        <item>偶尔</item>
        <item>频繁</item>
    </string-array>
    <string name="insulin_drug">胰岛素用药</string>
    <string name="visit_mode">随访方式</string>
    <string name="illegal">选择不合法</string>
    <string name="danger_grade">危险性</string>
    <string name="insight_appraise">自知力</string>
    <string name="sleep_type">睡眠状况</string>
    <string name="diet_type">饮食情况</string>
    <string name="living">个人生活</string>
    <string name="housework">家务劳动</string>
    <string name="work">劳动工作</string>
    <string name="study">学习能力</string>
    <string name="sociality">社会人际交往</string>
    <string name="affray">轻度滋事</string>
    <string name="cause_trouble">肇事</string>
    <string name="guardian_name">监护人姓名</string>
    <string name="guardian_telephone">监护人电话</string>
    <string name="village_info">村委联系人、电话</string>
    <string name="spirit_state">主要症状</string>
    <string name="diagnose_name">诊断</string>
    <string name="diagnose_hospital">确诊医院</string>
    <string name="disaster">肇祸</string>
    <string name="autolesion">自伤</string>
    <string name="attempted_suicide">自杀未遂</string>
    <string name="close_lock">关锁情况</string>
    <string name="in_hospital">住院情况</string>
    <string name="leave_hospital_time">末次出院时间</string>
    <string name="laboratory_abn">实验室检查标志</string>
    <string name="laboratory_examination">实验室检查情况</string>
    <string name="transfert">转诊</string>
    <string name="anamnesis_tr_type">治疗效果</string>
    <string name="health_guide_adv">康复措施</string>
    <string name="menses_over_date">末次月经</string>
    <string name="is_high_risk">是否高危</string>
    <string name="high_score">高危分值</string>
    <string name="create_week_days">创建周天</string>
    <string name="create_week">创建孕周</string>
    <string name="birth_date">出生日期</string>
    <string name="manual_ehr_id">保健手册号码</string>
    <string name="due_birth_date">预产期</string>
    <string name="add_maunal">添加手册</string>
    <string name="commint">提交</string>
    <string name="cyesis">孕次</string>
    <string name="parturient">产次</string>
    <string name="eutocia">自然分娩</string>
    <string name="caesarean">刨宫产</string>
    <string name="birth_week">出生孕周</string>
    <string name="birth_week_days">出生孕天</string>
    <string name="anamnesis">既往病史</string>
    <string name="anamnesis_other">其它病史</string>
    <string name="family_disease">家族疾病史</string>
    <string name="family_disease_other">其它家族疾病史</string>
    <string name="personal_history">个人病史</string>
    <string name="personal_history_other">其它个人病史</string>
    <string name="gynaecology_operation_mark">妇科手术史</string>
    <string name="gynaecology_other">其它妇科手术史</string>
    <string name="week">周</string>
    <string name="day">天</string>
    <string name="abort">流产</string>
    <string name="die_foetus">死胎</string>
    <string name="die_birth">死产</string>
    <string name="die_newbron">新生儿死亡</string>
    <string name="handicapped">出生缺陷儿</string>
    <string name="heart_result">心脏听诊</string>
    <string name="lung_result">肺部听诊</string>
    <string name="pudendum_result">外阴检查</string>
    <string name="cunt_result">阴道检查</string>
    <string name="cervical_result">宫颈检查</string>
    <string name="uterus_result">子宫检查</string>
    <string name="appendage_result">附件检查</string>
    <string name="blood_hb">血红蛋白值</string>
    <string name="blood_hb_unit">g/L</string>
    <string name="leukocyte">血细胞计数</string>
    <string name="leukocyte_unit">10^9/L</string>
    <string name="blood_plt">血小板计数</string>
    <string name="blood_other">血常规-其它</string>
    <string name="blood_sugar">血糖</string>
    <string name="upro_value">尿蛋白</string>
    <string name="upro_value_unit">mg/24h</string>
    <string name="qualitative_name">尿糖定量检测尿酮体</string>
    <string name="occultblood_name">尿潜血</string>
    <string name="urine_other">尿常规-其它</string>
    <string name="serum_alt">血清谷丙转氨酶</string>
    <string name="serum_got">血清谷草转氨酶</string>
    <string name="serum_alt_unit">U/L</string>
    <string name="umol_l">umol/L</string>
    <string name="albumin_chroma">血蛋白浓度</string>
    <string name="total_bilirubin">总胆红素值</string>
    <string name="conjugated_bilirubin">结合胆红素值</string>
    <string name="blood_creatinine">血清肌酐</string>
    <string name="blood_un">血尿素氨</string>
    <string name="hbs_ag">乙型肝炎表面抗原</string>
    <string name="hbs_ab">乙型肝炎表面抗体</string>
    <string name="hbe_ag">乙型肝炎e抗原</string>
    <string name="hbe_ab">乙型肝炎e抗体</string>
    <string name="hbc_ab">乙型肝炎核心抗体</string>
    <string name="vagina_cleanliness">阴道清洁度</string>
    <string name="cunt_secretion_other">阴道分泌物其它</string>
    <string name="syphilis_serology">梅毒血清试验</string>
    <string name="hiv">HIV抗体检测</string>
    <string name="b_us">B超</string>
    <string name="evaluate_mark">总体评估</string>
    <string name="health_guide_str">健康指导</string>
    <string name="health_guide_other">其它健康指导</string>
    <string name="education_prescribe">教育处方</string>
    <string name="glu_value">尿糖定量检测</string>
    <string name="cunt_secretion">阴道分泌物</string>
    <string name="chief_complaint">主诉</string>
    <string name="fundus">宫底高度</string>
    <string name="fetal_position">胎位</string>
    <string name="abd_cir">腹围</string>
    <string name="emb_heart_rate_time">胎心率</string>
    <string name="other_mtest">其他检查</string>
    <string name="visit_class">随访分类</string>
    <string name="visit_class_abn">随访异常</string>
    <string name="guidance">指导</string>
    <string name="stop_women">档案封存</string>
    <string name="stop_why">封存原因</string>
    <string name="pregnant_one">第1次产前随访</string>
    <string name="pregnant_25">产前2~5次随访</string>
    <string name="pregnant_after">产后随访</string>
    <string name="pregnant_after42">产后42天随访</string>
    <string name="isSubmitting">正在提交...</string>
    <string name="childbirth_date">分娩日期</string>
    <string name="blood_rh">RH阴性</string>
</resources>