<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="@dimen/x10"
              android:orientation="vertical">

    <LinearLayout style="@style/layout_visit_stysle">

        <TextView
            style="@style/evnAqTextView"
            android:text="@string/name"/>

        <EditText
            android:id="@+id/name"
            style="@style/edit"
            android:editable="false"/>

        <TextView
            style="@style/evnAqTextView"
            android:text="@string/sex"/>

        <EditText
            android:id="@+id/sex"
            style="@style/edit"
            android:editable="false"/>
    </LinearLayout>

    <LinearLayout style="@style/layout_visit_stysle">

        <TextView
            style="@style/evnAqTextView"
            android:text="@string/menses_over_date"/>

        <EditText
            android:id="@+id/menses_over_date"
            style="@style/edit"
            android:editable="false"/>

    </LinearLayout>

    <LinearLayout style="@style/layout_visit_stysle">

        <TextView
            style="@style/evnAqTextView"
            android:text="@string/is_high_risk"/>

        <EditText
            android:id="@+id/is_high_risk"
            style="@style/edit"
            android:editable="false"/>

        <TextView
            style="@style/evnAqTextView"
            android:text="@string/high_score"/>

        <EditText
            android:id="@+id/high_score"
            style="@style/edit"
            android:editable="false"/>

    </LinearLayout>
    <LinearLayout style="@style/layout_visit_stysle">

        <TextView
            style="@style/evnAqTextView"
            android:text="@string/create_week_days"/>

        <EditText
            android:id="@+id/create_week_days"
            style="@style/edit"
            android:editable="false"/>

        <TextView
            style="@style/evnAqTextView"
            android:text="@string/create_week"/>

        <EditText
            android:id="@+id/create_week"
            style="@style/edit"
            android:editable="false"/>

    </LinearLayout>
    <LinearLayout style="@style/layout_visit_stysle">

        <TextView
            style="@style/evnAqTextView"
            android:text="@string/blood_rh"/>

        <EditText
            android:id="@+id/blood_rh"
            style="@style/edit"
            android:editable="false"/>

        <TextView
            style="@style/evnAqTextView"
            android:text="@string/birth_date"/>

        <EditText
            android:id="@+id/birth_date"
            style="@style/edit"
            android:editable="false"/>

    </LinearLayout>
    <LinearLayout style="@style/layout_visit_stysle">

        <TextView
            style="@style/evnAqTextView"
            android:text="@string/address"/>

        <EditText
            android:id="@+id/address_str"
            style="@style/edit"
            android:editable="false"/>

    </LinearLayout>
</LinearLayout>